--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "satyam.subham.uikit.login"
         minSdkVersion 19
@@ -21,7 +23,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    dataBinding {
+        enabled = true
+    }
 }
+
 ext {
     supportLibVersion = '28.0.0'
     retrofitVersion = '2.3.0'
@@ -42,6 +49,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+//    annotationProcessor  "com.android.databinding:compiler:3.1.4"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
